KubeConfigs/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metacity-backend
  namespace: metacity
  labels:
    app: metacity
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metacity
      component: backend
  template:
    metadata:
      name: metacity-backend
      namespace: metacity
      labels:
        app: metacity
        component: backend
    spec:
      containers:
      - name: metacity-backend
        image: registry.digitalocean.com/metaforce/backend:0.53a
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /api/public/ping
            port: 8081
          timeoutSeconds: 5
          initialDelaySeconds: 60
          periodSeconds: 60
        livenessProbe:
          httpGet:
            path: /api/public/ping
            port: 8081
          timeoutSeconds: 5
          initialDelaySeconds: 60
          periodSeconds: 60
      imagePullSecrets:
      - name: registry-metaforce
---
apiVersion: v1
kind: Service
metadata:
  name: metacity-backend
  namespace: metacity
  labels:
    app: metacity
    component: backend
spec:
  selector:
    app: metacity
    component: backend
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8081
