KubeConfigs/director.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metacity-director
  namespace: metacity
  labels:
    app: metacity
    component: director
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metacity
      component: director
  template:
    metadata:
      name: metacity-director
      namespace: metacity
      labels:
        app: metacity
        component: director
    spec:
      containers:
      - name: metacity-director
        image: registry.digitalocean.com/metaforce/neodao-director:0.39
        imagePullPolicy: Always
      imagePullSecrets:
      - name: registry-metaforce
---
kind: Service
apiVersion: v1
metadata:
  name: metacity-director
  namespace: metacity
  labels:
    app: metacity
    component: director
spec:
  selector:
    app: metacity
    component: director
  clusterIP: None
  type: ClusterIP
  ports:
  - name: grpc
    protocol: TCP
    port: 50501
