KubeConfigs/graylog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog
  namespace: metacity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graylog
  template:
    metadata:
      labels:
        app: graylog
    spec:
      containers:
      - name: graylog
        image: graylog/graylog:4.3
        ports:
        - containerPort: 9000  
          protocol: TCP
        - containerPort: 12201 
          protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: graylog
  namespace: metacity
spec:
  ports:
    - port: 9000
      name: http
      protocol: TCP
    - port: 12201
      name: gelf
      protocol: UDP
  selector:
    app: graylog
