KubeConfigs/mongodb-graylog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: metacity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4.4.6
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: metacity
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
