KubeConfigs/graylog-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gelf-udp
  namespace: metacity
spec:
  podSelector:
    matchLabels:
      app: graylog
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: UDP
      port: 12201
  egress:
  - to:
    - podSelector: {}
    ports:
    - protocol: UDP
      port: 12201
  policyTypes:
  - Ingress
  - Egress
